--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <option disabled selected value="">Tipo de Conta</option>
               <option value="mentee">Mentee</option>
               <option value="mentor">Mentor</option>
-              <option value="admin" id="admin-register-option" hidden>Administrador(a)</option></select>
+              <option value="admin" id="admin-register-option">Administrador(a)</option></select>
             </div>
             <div class="col-6"><select class="form-select" name="gender" required>
               <option disabled selected value="">Gênero</option>
