--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="./src/css/calendar.css">
-  <link rel="stylesheet" href="./src/css/style.css"> 
+  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="./src/css/calendar.css"> 
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js'></script>
 </head>
 <body>
@@ -22,8 +22,8 @@
         
         <div id="login-container">
           <form id="form-login" class="d-grid gap-3">
-            <input type="email" class="form-control form-control-lg" placeholder="Email" required/>
-            <input type="password" class="form-control form-control-lg" placeholder="Senha" required/>
+            <input type="text" class="form-control form-control-lg" name="loginIdentifier" placeholder="Email ou Nome de Usuário" required/>
+            <input type="password" class="form-control form-control-lg" name="password" placeholder="Senha" required/>
             <button type="submit" class="btn btn-primary btn-lg fw-bold">Entrar</button>
           </form>
           <div class="text-center my-3">
@@ -39,7 +39,6 @@
           <h2 class="fs-4 text-center fw-bold mb-3">Crie sua Conta</h2>
           <form id="form-cadastro" class="row g-2">
             <div class="col-12"><input type="text" name="fullName" class="form-control" placeholder="Nome Completo" required /></div>
-            <!-- LINHA CORRIGIDA/ADICIONADA ABAIXO -->
             <div class="col-12"><input type="text" name="username" class="form-control" placeholder="Nome de Usuário" required /></div>
             <div class="col-12"><input type="email" name="email" class="form-control" placeholder="E-mail" required /></div>
             <div class="col-12"><input type="password" name="password" class="form-control" placeholder="Senha (mín. 6 caracteres)" required minlength="6"/></div>
@@ -428,6 +427,6 @@ Quartas: 14h - 16h"></textarea></div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./src/js/app.ts"></script>
+  <script type="module" src="/src/js/app.ts"></script>
 </body>
 </html>
