--- a/index.html
+++ b/index.html
@@ -426,6 +426,6 @@ Quartas: 14h - 16h"></textarea></div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="/src/js/app.ts"></script>
+  <script type="module" src="/dist/js/app.js"></script>
 </body>
 </html>
