feat: atualizando o projeto

--- a/index.html
+++ b/index.html
@@ -210,9 +210,33 @@
                     <div class="card-body" id="agendamento-card-body">
                         <div id="mentor-appointment-view">
                             <div class="row g-3 mb-4" id="mentor-stats-panel">
-                              <div class="col-md-4"><div class="card text-center h-100"><div class="card-body"><h4 class="h1" id="mentor-stats-total">0</h4><p class="text-muted mb-0">Encontros Realizados</p></div></div></div>
-                              <div class="col-md-4"><div class="card text-center h-100"><div class="card-body"><h4 class="h1" id="mentor-stats-mentees">0</h4><p class="text-muted mb-0">Mentees Atendidos</p></div></div></div>
-                              <div class="col-md-4"><div class="card text-center h-100"><div class="card-body"><h4 class="h5" id="mentor-stats-next">Nenhum</h4><p class="text-muted mb-0">Próximo Encontro</p></div></div></div>
+                                <div class="col-md-4">
+                                    <div class="card text-center h-100 stat-card">
+                                        <div class="card-body">
+                                            <i class="bi bi-check2-circle stat-icon text-success"></i>
+                                            <h4 class="h1" id="mentor-stats-total">0</h4>
+                                            <p class="text-muted mb-0">Encontros Realizados</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card text-center h-100 stat-card">
+                                        <div class="card-body">
+                                            <i class="bi bi-people-fill stat-icon text-primary"></i>
+                                            <h4 class="h1" id="mentor-stats-mentees">0</h4>
+                                            <p class="text-muted mb-0">Mentees Atendidos</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card text-center h-100 stat-card">
+                                        <div class="card-body">
+                                            <i class="bi bi-calendar-week stat-icon text-info"></i>
+                                            <h4 class="h5" id="mentor-stats-next">Nenhum</h4>
+                                            <p class="text-muted mb-0">Próximo Encontro</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <ul class="nav nav-tabs nav-fill mb-3" id="appointments-tabs" role="tablist">
                               <li class="nav-item" role="presentation">
