feat: atualizando o projeto!

--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
             <div id="user-content" class="row g-4 h-100">
               <section id="dashboard-section" class="content-view col-12 d-none">
                 <h2 class="fs-4 mb-4">Bem-vindo(a) de volta!</h2>
+                
                 <div class="row g-4">
                   <div class="col-lg-8">
+                    <div id="dashboard-profile-completion" class="card mb-4 d-none">
+                    </div>
                     <div class="card h-100">
                       <div class="card-header">
                         <h5 class="mb-0 fs-6"><i class="bi bi-calendar-event me-2"></i>Próximo Encontro</h5>
